# lab

./: .gitignore  pyproject.toml
lab/instruments/: rigol_dl_3021_a.py  rigol_dm_858_e.py  rohde_und_schwarz_hmc8012.py  scpi_instrument.py  siglent_sds_1104_x.py  siglent_spd_1305_x.py
lab/measurements/: load_regulation.html  load_regulation.ipynb  load_regulation.py  sload_regulation_measurement.py  temp_and_noise.py
lab/measurements/LM2596_1/: load_regulation_12v.csv  load_regulation_12v.meta.csv  load_regulation_5v.csv  load_regulation_5v.meta.csv  load_regulation_6v.csv  load_regulation_6v.meta.csv
lab/measurements/LM2596_1/TryingDiodeANdInductor/: load_regulation.csv  load_regulation.meta.csv  load_regulation680lr.csv  load_regulation680lr.meta.csv  load_regulation_470.csv  load_regulation_470.meta.csv  load_regulation_680.csv  load_regulation_680.meta.csv  load_regulation_in20v.csv  load_regulation_in20v.meta.csv  load_regulation_in22v.csv  load_regulation_in22v.meta.csv  load_regulation_in23v.csv  load_regulation_in23v.meta.csv  load_regulation_lm2596_2_6v.csv  load_regulation_lm2596_2_6v.meta.csv  load_regulation_lr_schotky_tdk330.csv  load_regulation_lr_schotky_tdk330.meta.csv  load_regulation_orig_schotky.csv  load_regulation_orig_schotky.meta.csv  load_regulation_r_schotky.csv  load_regulation_r_schottky.meta.csv
