[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["Michael Eibelshaeuser <michaeleibelshauser@yahoo.de>"]
readme = "README.md"
packages = [{ include = "lab/instruments" }, { include = "lab/measurements" }]

[tool.poetry.dependencies]
python = "^3.11"
quantiphy = "^2.20"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
