[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["Michael Eibelshaeuser <michaeleibelshauser@yahoo.de>"]
readme = "README.md"
packages = [{ include = "lab/instruments" }, { include = "lab/measurements" }]

[tool.poetry.dependencies]
python = "^3.11"
quantiphy = "^2.20"
matplotlib = "^3.9.0"
pyvisa = "^1.14.1"
pyvisa-py = "^0.7.2"
pandas = "^2.2.2"
plotly = "^5.22.0"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
